plugins {
    id 'java'
    id 'application'
    id 'me.champeau.gradle.jmh' version '0.5.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    jmh 'org.openjdk.jmh:jmh-core:1.26'
    testImplementation(platform('org.junit:junit-bom:5.7.0'))
    testImplementation('org.junit.jupiter:junit-jupiter')
}

test {
    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }

}

application {
    mainClass = 'examples.Vectorization'
//    applicationDefaultJvmArgs = ['-XX:+UnlockDiagnosticVMOptions', '-XX:+PrintAssembly', '-XX:-UseSuperWord', '--add-modules', 'jdk.incubator.vector']
    applicationDefaultJvmArgs = [
            '-XX:+UnlockDiagnosticVMOptions',
//            '-XX:+PrintAssembly',
            '-XX:CompileCommand=print,examples/Vectorization.vectorComputationWithRemainder',
            '--add-modules', 'jdk.incubator.vector'
    ]
}

jmh {
    jvmArgs = ['--add-modules', 'jdk.incubator.vector']
}
